--- a/presentation.Rmd
+++ b/presentation.Rmd
@@ -26,7 +26,7 @@ Can we gain insight into the causes of adolescent risk-taking ...
 
 ... if we understand individual differences in thought and behavior as _strategies_ for satisfying fundamental motivations?
 
-## Methodological approaches
+## Methodological approaches: modeling
 
 - Modeling development (adolescence, adulthood)
     - Models encode hypotheses
